# OpenCVPractices

./: CMakeLists.txt
src/: read_camera.cpp  read_write_imgs.cpp
utils/: CMakeLists.txt
utils/inc/: MyTimer.h
utils/src/: plotting.cpp
